test/TestPhases/typechecker/invalid/emptyIf.blc
@[EntryPoint]
activity running()
    if false then else end
end